feat(create-recipe): create recipe - write unit test - defined the recipe schema - implement create article [#164139774]
