# server/routes/recipe-routes.js
@@ -1,0 +1,8 @@
+import { Router } from 'express';
+import RecipeController from '../controllers/recipe-controller';
+
+const router = Router();
+
+router.post('/', RecipeController.create);
+
+export default router;
